--- a/package.json
+++ b/package.json
@@ -44,6 +44,17 @@
 		"npm": {
 			"publish": false
 		},
+		"git": {
+			"commitMessage": "chore: release v${version}"
+		},
+		"github": {
+			"release": true,
+			"assets": [
+				"main.js",
+				"manifest.json",
+				"styles.css"
+			]
+		}
 		"plugins": {
 			"@release-it/conventional-changelog": {
 				"infile": "CHANGELOG.md",
