--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"lint-staged": "^13.2.2",
 		"obsidian": "latest",
 		"prettier": "^2.8.8",
-		"release-it": "^15.11.0",
+		"release-it": "17.1.1",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
 	},
